# wolfys-media-downloader

./: .gitignore  LICENSE  README.md  WolfysMediaDownloader.spec  build.bat  main.py  pyproject.toml  requirements.txt  run.bat  version_info.txt
.codex/environments/: environment.toml
core/: cli.py  config.py  deps.py  downloader.py  paths.py  queue_manager.py  updater.py  version.py
gui/: app.py  dep_dialog.py  update_dialog.py
gui/tabs/: dev_tab.py  download_tab.py  history_tab.py  queue_tab.py  settings_tab.py
tools/: README.md
